tools/FGDParser.py
# Generated from FGD.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class FGDParser ( Parser ):

    grammarFileName = "FGD.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@'", "'='", "':'", "'('", "','", "'{'", 
                     "'}'", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUMBER", "QUOTED_STRING", 
                      "KEYWORD", "BLOCKCOMMENT", "LINECOMMENT", "WS" ]

    RULE_blocks = 0
    RULE_classdef = 1
    RULE_classtype = 2
    RULE_classattribute = 3
    RULE_attributeproperty = 4
    RULE_vectorproperty = 5
    RULE_classname = 6
    RULE_tooltip = 7
    RULE_classprops = 8
    RULE_untypedproperty = 9
    RULE_typedproperty = 10
    RULE_option = 11
    RULE_valuetype = 12
    RULE_propertyname = 13
    RULE_value = 14
    RULE_optionkey = 15

    ruleNames =  [ "blocks", "classdef", "classtype", "classattribute", 
                   "attributeproperty", "vectorproperty", "classname", "tooltip", 
                   "classprops", "untypedproperty", "typedproperty", "option", 
                   "valuetype", "propertyname", "value", "optionkey" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    NUMBER=11
    QUOTED_STRING=12
    KEYWORD=13
    BLOCKCOMMENT=14
    LINECOMMENT=15
    WS=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BlocksContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FGDParser.EOF, 0)

        def classdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FGDParser.ClassdefContext)
            else:
                return self.getTypedRuleContext(FGDParser.ClassdefContext,i)


        def getRuleIndex(self):
            return FGDParser.RULE_blocks

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlocks" ):
                listener.enterBlocks(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlocks" ):
                listener.exitBlocks(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlocks" ):
                return visitor.visitBlocks(self)
            else:
                return visitor.visitChildren(self)




    def blocks(self):

        localctx = FGDParser.BlocksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_blocks)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FGDParser.T__0:
                self.state = 32
                self.classdef()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(FGDParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classtype(self):
            return self.getTypedRuleContext(FGDParser.ClasstypeContext,0)


        def classname(self):
            return self.getTypedRuleContext(FGDParser.ClassnameContext,0)


        def classprops(self):
            return self.getTypedRuleContext(FGDParser.ClasspropsContext,0)


        def classattribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FGDParser.ClassattributeContext)
            else:
                return self.getTypedRuleContext(FGDParser.ClassattributeContext,i)


        def tooltip(self):
            return self.getTypedRuleContext(FGDParser.TooltipContext,0)


        def getRuleIndex(self):
            return FGDParser.RULE_classdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassdef" ):
                listener.enterClassdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassdef" ):
                listener.exitClassdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdef" ):
                return visitor.visitClassdef(self)
            else:
                return visitor.visitChildren(self)




    def classdef(self):

        localctx = FGDParser.ClassdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(FGDParser.T__0)
            self.state = 41
            self.classtype()
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FGDParser.KEYWORD:
                self.state = 42
                self.classattribute()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(FGDParser.T__1)
            self.state = 49
            self.classname()
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FGDParser.T__2:
                self.state = 50
                self.match(FGDParser.T__2)
                self.state = 51
                self.tooltip()


            self.state = 54
            self.classprops()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClasstypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(FGDParser.KEYWORD, 0)

        def getRuleIndex(self):
            return FGDParser.RULE_classtype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClasstype" ):
                listener.enterClasstype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClasstype" ):
                listener.exitClasstype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClasstype" ):
                return visitor.visitClasstype(self)
            else:
                return visitor.visitChildren(self)




    def classtype(self):

        localctx = FGDParser.ClasstypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classtype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(FGDParser.KEYWORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassattributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(FGDParser.KEYWORD, 0)

        def vectorproperty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FGDParser.VectorpropertyContext)
            else:
                return self.getTypedRuleContext(FGDParser.VectorpropertyContext,i)


        def attributeproperty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FGDParser.AttributepropertyContext)
            else:
                return self.getTypedRuleContext(FGDParser.AttributepropertyContext,i)


        def untypedproperty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FGDParser.UntypedpropertyContext)
            else:
                return self.getTypedRuleContext(FGDParser.UntypedpropertyContext,i)


        def getRuleIndex(self):
            return FGDParser.RULE_classattribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassattribute" ):
                listener.enterClassattribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassattribute" ):
                listener.exitClassattribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassattribute" ):
                return visitor.visitClassattribute(self)
            else:
                return visitor.visitChildren(self)




    def classattribute(self):

        localctx = FGDParser.ClassattributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classattribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(FGDParser.KEYWORD)
            self.state = 59
            self.match(FGDParser.T__3)
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 60
                self.vectorproperty()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==FGDParser.T__4:
                    self.state = 61
                    self.match(FGDParser.T__4)
                    self.state = 62
                    self.vectorproperty()
                    self.state = 67
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.state = 68
                self.attributeproperty()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==FGDParser.T__4:
                    self.state = 69
                    self.match(FGDParser.T__4)
                    self.state = 70
                    self.attributeproperty()
                    self.state = 75
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 3:
                self.state = 76
                self.match(FGDParser.T__5)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==FGDParser.QUOTED_STRING:
                    self.state = 77
                    self.untypedproperty()
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 83
                self.match(FGDParser.T__6)
                pass


            self.state = 86
            self.match(FGDParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributepropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(FGDParser.KEYWORD, 0)

        def NUMBER(self):
            return self.getToken(FGDParser.NUMBER, 0)

        def QUOTED_STRING(self):
            return self.getToken(FGDParser.QUOTED_STRING, 0)

        def getRuleIndex(self):
            return FGDParser.RULE_attributeproperty

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeproperty" ):
                listener.enterAttributeproperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeproperty" ):
                listener.exitAttributeproperty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeproperty" ):
                return visitor.visitAttributeproperty(self)
            else:
                return visitor.visitChildren(self)




    def attributeproperty(self):

        localctx = FGDParser.AttributepropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attributeproperty)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FGDParser.NUMBER) | (1 << FGDParser.QUOTED_STRING) | (1 << FGDParser.KEYWORD))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VectorpropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(FGDParser.NUMBER)
            else:
                return self.getToken(FGDParser.NUMBER, i)

        def getRuleIndex(self):
            return FGDParser.RULE_vectorproperty

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVectorproperty" ):
                listener.enterVectorproperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVectorproperty" ):
                listener.exitVectorproperty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVectorproperty" ):
                return visitor.visitVectorproperty(self)
            else:
                return visitor.visitChildren(self)




    def vectorproperty(self):

        localctx = FGDParser.VectorpropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vectorproperty)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(FGDParser.NUMBER)
            self.state = 91
            self.match(FGDParser.NUMBER)
            self.state = 92
            self.match(FGDParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassnameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(FGDParser.KEYWORD, 0)

        def getRuleIndex(self):
            return FGDParser.RULE_classname

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassname" ):
                listener.enterClassname(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassname" ):
                listener.exitClassname(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassname" ):
                return visitor.visitClassname(self)
            else:
                return visitor.visitChildren(self)




    def classname(self):

        localctx = FGDParser.ClassnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(FGDParser.KEYWORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TooltipContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTED_STRING(self):
            return self.getToken(FGDParser.QUOTED_STRING, 0)

        def getRuleIndex(self):
            return FGDParser.RULE_tooltip

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTooltip" ):
                listener.enterTooltip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTooltip" ):
                listener.exitTooltip(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTooltip" ):
                return visitor.visitTooltip(self)
            else:
                return visitor.visitChildren(self)




    def tooltip(self):

        localctx = FGDParser.TooltipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tooltip)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(FGDParser.QUOTED_STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClasspropsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typedproperty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FGDParser.TypedpropertyContext)
            else:
                return self.getTypedRuleContext(FGDParser.TypedpropertyContext,i)


        def getRuleIndex(self):
            return FGDParser.RULE_classprops

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassprops" ):
                listener.enterClassprops(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassprops" ):
                listener.exitClassprops(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassprops" ):
                return visitor.visitClassprops(self)
            else:
                return visitor.visitChildren(self)




    def classprops(self):

        localctx = FGDParser.ClasspropsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_classprops)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(FGDParser.T__8)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FGDParser.KEYWORD:
                self.state = 99
                self.typedproperty()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(FGDParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UntypedpropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTED_STRING(self):
            return self.getToken(FGDParser.QUOTED_STRING, 0)

        def value(self):
            return self.getTypedRuleContext(FGDParser.ValueContext,0)


        def getRuleIndex(self):
            return FGDParser.RULE_untypedproperty

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUntypedproperty" ):
                listener.enterUntypedproperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUntypedproperty" ):
                listener.exitUntypedproperty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUntypedproperty" ):
                return visitor.visitUntypedproperty(self)
            else:
                return visitor.visitChildren(self)




    def untypedproperty(self):

        localctx = FGDParser.UntypedpropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_untypedproperty)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(FGDParser.QUOTED_STRING)
            self.state = 108
            self.match(FGDParser.T__2)
            self.state = 109
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedpropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def propertyname(self):
            return self.getTypedRuleContext(FGDParser.PropertynameContext,0)


        def valuetype(self):
            return self.getTypedRuleContext(FGDParser.ValuetypeContext,0)


        def value(self):
            return self.getTypedRuleContext(FGDParser.ValueContext,0)


        def tooltip(self):
            return self.getTypedRuleContext(FGDParser.TooltipContext,0)


        def option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FGDParser.OptionContext)
            else:
                return self.getTypedRuleContext(FGDParser.OptionContext,i)


        def getRuleIndex(self):
            return FGDParser.RULE_typedproperty

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedproperty" ):
                listener.enterTypedproperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedproperty" ):
                listener.exitTypedproperty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedproperty" ):
                return visitor.visitTypedproperty(self)
            else:
                return visitor.visitChildren(self)




    def typedproperty(self):

        localctx = FGDParser.TypedpropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typedproperty)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.propertyname()
            self.state = 112
            self.match(FGDParser.T__3)
            self.state = 113
            self.valuetype()
            self.state = 114
            self.match(FGDParser.T__7)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 115
                self.match(FGDParser.T__2)
                self.state = 116
                self.match(FGDParser.T__2)
                self.state = 117
                self.value()

            elif la_ == 2:
                self.state = 118
                self.match(FGDParser.T__2)
                self.state = 119
                self.tooltip()
                self.state = 120
                self.match(FGDParser.T__2)
                self.state = 121
                self.value()

            elif la_ == 3:
                self.state = 123
                self.match(FGDParser.T__2)
                self.state = 124
                self.tooltip()


            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FGDParser.T__1:
                self.state = 127
                self.match(FGDParser.T__1)
                self.state = 128
                self.match(FGDParser.T__8)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==FGDParser.NUMBER or _la==FGDParser.QUOTED_STRING:
                    self.state = 129
                    self.option()
                    self.state = 134
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 135
                self.match(FGDParser.T__9)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def optionkey(self):
            return self.getTypedRuleContext(FGDParser.OptionkeyContext,0)


        def value(self):
            return self.getTypedRuleContext(FGDParser.ValueContext,0)


        def tooltip(self):
            return self.getTypedRuleContext(FGDParser.TooltipContext,0)


        def getRuleIndex(self):
            return FGDParser.RULE_option

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOption" ):
                listener.enterOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOption" ):
                listener.exitOption(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOption" ):
                return visitor.visitOption(self)
            else:
                return visitor.visitChildren(self)




    def option(self):

        localctx = FGDParser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_option)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.optionkey()
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 139
                self.match(FGDParser.T__2)
                self.state = 140
                self.match(FGDParser.T__2)
                self.state = 141
                self.value()
                pass

            elif la_ == 2:
                self.state = 142
                self.match(FGDParser.T__2)
                self.state = 143
                self.tooltip()
                self.state = 144
                self.match(FGDParser.T__2)
                self.state = 145
                self.value()
                pass

            elif la_ == 3:
                self.state = 147
                self.match(FGDParser.T__2)
                self.state = 148
                self.tooltip()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValuetypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(FGDParser.KEYWORD, 0)

        def getRuleIndex(self):
            return FGDParser.RULE_valuetype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValuetype" ):
                listener.enterValuetype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValuetype" ):
                listener.exitValuetype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValuetype" ):
                return visitor.visitValuetype(self)
            else:
                return visitor.visitChildren(self)




    def valuetype(self):

        localctx = FGDParser.ValuetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_valuetype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(FGDParser.KEYWORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertynameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(FGDParser.KEYWORD, 0)

        def getRuleIndex(self):
            return FGDParser.RULE_propertyname

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertyname" ):
                listener.enterPropertyname(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertyname" ):
                listener.exitPropertyname(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyname" ):
                return visitor.visitPropertyname(self)
            else:
                return visitor.visitChildren(self)




    def propertyname(self):

        localctx = FGDParser.PropertynameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_propertyname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(FGDParser.KEYWORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(FGDParser.NUMBER, 0)

        def QUOTED_STRING(self):
            return self.getToken(FGDParser.QUOTED_STRING, 0)

        def getRuleIndex(self):
            return FGDParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = FGDParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            _la = self._input.LA(1)
            if not(_la==FGDParser.NUMBER or _la==FGDParser.QUOTED_STRING):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionkeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(FGDParser.NUMBER, 0)

        def QUOTED_STRING(self):
            return self.getToken(FGDParser.QUOTED_STRING, 0)

        def getRuleIndex(self):
            return FGDParser.RULE_optionkey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptionkey" ):
                listener.enterOptionkey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptionkey" ):
                listener.exitOptionkey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionkey" ):
                return visitor.visitOptionkey(self)
            else:
                return visitor.visitChildren(self)




    def optionkey(self):

        localctx = FGDParser.OptionkeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_optionkey)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            _la = self._input.LA(1)
            if not(_la==FGDParser.NUMBER or _la==FGDParser.QUOTED_STRING):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





